# surrealml

./: .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  docker-compose.yml  get_latest_version.py  justfile  pyproject.toml  requirements.txt  setup.py  test.surml  test_forrest.surml
.cargo/: config
.github/: CODEOWNERS
clients/python/build-context/modules/c-wrapper/: Cargo.toml
clients/python/build-context/modules/c-wrapper/src/api/execution/: mod.rs
modules/c-wrapper/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_output.txt
modules/c-wrapper/build-context/: Dockerfile
modules/c-wrapper/build-context/c-wrapper/: Cargo.toml
modules/c-wrapper/build-context/c-wrapper/scripts/: build-docker.sh
modules/c-wrapper/build-context/c-wrapper/src/: state.rs
modules/c-wrapper/build-context/c-wrapper/src/api/: mod.rs
modules/c-wrapper/build-context/c-wrapper/src/api/storage/: save_model.rs  upload_model.rs
modules/c-wrapper/build-context/c-wrapper/tests/test_utils/: c_lib_loader.py  routes.py
modules/c-wrapper/build-context/core/: Cargo.toml  Dockerfile  build.rs
modules/c-wrapper/build-context/core/scripts/: install_onnxruntime_linux.sh
modules/c-wrapper/build-context/core/src/: lib.rs
modules/c-wrapper/build-context/core/src/execution/: compute.rs  session.rs
modules/c-wrapper/build-context/core/src/storage/header/: output.rs  version.rs
modules/c-wrapper/scripts/: build-docker.sh  prep_tests.sh
modules/c-wrapper/src/: lib.rs  state.rs  utils.rs
modules/c-wrapper/src/api/execution/: buffered_compute.rs  mod.rs  raw_compute.rs
modules/c-wrapper/src/api/ml_sys/: link_onnx.rs
modules/c-wrapper/src/api/storage/: load_cached_raw_model.rs  load_model.rs  meta.rs  mod.rs  save_model.rs  to_bytes.rs  upload_model.rs
modules/c-wrapper/tests/: test_execution.py
modules/c-wrapper/tests/api/execution/: test_raw_compute.py
modules/c-wrapper/tests/api/storage/: test_load_cached_raw_model.py  test_meta.py
modules/c-wrapper/tests/test_utils/: c_lib_loader.py  return_structs.py
modules/core/: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
modules/core/model_stash/sklearn/onnx/: multiple_linear.onnx
modules/core/model_stash/sklearn/surml/: multiple_linear.surml
modules/core/model_stash/tensorflow/surml/: linear.surml
modules/core/model_stash/torch/surml/: linear.surml
modules/core/scripts/: install_onnxruntime_linux.sh
modules/core/src/: errors.rs  lib.rs
modules/core/src/errors/: actix.rs  axum.rs  error.rs  mod.rs
modules/core/src/execution/: compute.rs  mod.rs  session.rs
modules/core/src/storage/: stream_adapter.rs  surml_file.rs
modules/core/src/storage/header/: engine.rs  input_dims.rs  keys.rs  mod.rs  origin.rs  output.rs  string_value.rs  version.rs
modules/core/src/storage/header/normalisers/: clipping.rs  linear_scaling.rs  log_scale.rs  mod.rs  utils.rs  wrapper.rs  z_score.rs
modules/glue/: Cargo.toml  README.md
modules/llms/: Cargo.toml
modules/llms/src/interface/: load_model.rs  mod.rs  run_model.rs
modules/llms/src/models/: model_wrapper.rs  model_wrapper_state.rs
modules/llms/src/models/model_spec/: model_spec_trait.rs
modules/llms/src/models/model_spec/models/: falcon.rs  gemma.rs  gemma2.rs  gemma3.rs  mistral.rs  mixtral.rs
modules/llms/src/tensors/: fetch_tensors.rs  tensor_utils.rs
modules/pipelines/data_access/: Cargo.toml  README.md
modules/pipelines/data_access/basic/: Cargo.toml
modules/pipelines/data_access/basic/src/: images.rs  lib.rs  srt_receiver.rs  tags.rs
modules/pipelines/data_access/data_stash/cleaned_labels/: VID68_processed.json  VID70_processed.json  VID73_processed.json  VID74_processed.json  VID75_processed.json
modules/pipelines/data_access/data_stash/images/: dummy_rgb_data.json  filelist.txt  tags.json
modules/pipelines/data_access/src/: images.rs  lib.rs  python_api.rs  tags.rs
modules/tokenizers/: Cargo.toml  README.md
modules/tokenizers/src/: error.rs  fetch_tokenizer.rs  lib.rs  preset_tokenizers.rs  tokenizer.rs
modules/transformers/: Cargo.toml
modules/transformers/llms/: Cargo.toml  README.md
modules/transformers/llms/src/: lib.rs
modules/transformers/llms/src/interface/: load_model.rs  run_model.rs
modules/transformers/llms/src/models/: mod.rs  model_wrapper.rs
modules/transformers/llms/src/models/model_spec/: mod.rs  model_spec_trait.rs
modules/transformers/llms/src/models/model_spec/models/: falcon.rs  gemma.rs  gemma2.rs  gemma3.rs  mistral.rs  mixtral.rs  mod.rs
modules/transformers/llms/src/tensors/: mod.rs  tensor_utils.rs
modules/transformers/run-worker/: Cargo.toml
modules/transformers/run-worker/src/: main.rs
modules/transformers/src/: lib.rs  preset_transformers.rs
modules/transformers/src/bert_sentiment/: mod.rs  model.rs  pooler.rs
modules/transformers/tokenizers/: Cargo.toml  README.md
modules/transformers/tokenizers/scripts/: tokenizer_download.sh
modules/transformers/tokenizers/src/: error.rs  fetch_tokenizer.rs  lib.rs  preset_tokenizers.rs  tokenizer.rs
modules/transformers/transformers/: sent_config.json  sent_two_model.safetensors  sentiment_safe_download.py
modules/transformers/wasm-wrapper/: Cargo.toml  README.md
modules/transformers/wasm-wrapper/src/: lib.rs  tokenizer.rs  utils.rs
modules/utils/: .gitignore  Cargo.toml  README.md  build.rs
modules/utils/builds/: Dockerfile.linux
modules/utils/src/: lib.rs  main.rs
modules/utils/src/execution/: compute.rs  mod.rs  onnx_environment.rs  wonnx_compute.rs
modules/utils/src/storage/: mod.rs  surml_file.rs
modules/utils/src/storage/header/: mod.rs  origin.rs  output.rs  string_value.rs
modules/utils/src/storage/header/normalisers/: utils.rs
modules/utils/stash/: forrest.surml  test.surml
modules/wasm-linker/: Cargo.toml
modules/wasm-linker/src/: lib.rs  link.rs
modules/wasm-linker/src/interfaces/: tokenizers.rs  utils.rs
modules/wasm-linker/src/wasm_hosting_interfaces/: llm.rs  mod.rs  tokenizers.rs
src/: lib.rs  main.rs  (+2 more)
(+109 files in other folders)
