[package]
name = "surrealml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.20.0"
uuid = { version = "1.4.1", features = ["v4"] }
once_cell = "1.18.0"
ndarray = "0.15.6"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"

surrealml_utils = { path = "./modules/utils" }

[dev-dependencies]
axum = "0.6.20"
serde = "1.0.183"
serde_json = "1.0.105"
actix-web = "4.3.1"

[lib]
name = "surrealml"
path = "src/lib.rs"
