[project]
name = "surrealml"
version = "0.0.1"
description = "SurrealMl is a file format for storing machine learning models across python (all versions) and Rust"
readme = "README.md"
dependencies = ["numpy>1.26.3"]
authors = [{ name = "Maxwell Flitton", email = "maxwell@gmail.com" }]

[project.optional-dependencies]
sklearn = ["skl2onnx==1.16.0", "scikit-learn==1.4.0"]
torch = ["torch==2.1.2"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "surrealml.rust_surrealml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.setuptools]
packages = [
    "surrealml",
    "surrealml.engine",
    "surrealml.model_templates",
    "surrealml.model_templates.datasets",
    "surrealml.model_templates.sklearn",
    "surrealml.model_templates.torch",
]
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
surrealml = ["binaries/*"]
