[package]
name = "c-wrapper"
version = "0.1.4"
edition = "2021"
description = "A Rust wrapper crate providing C bindings for SurrealML."
license-file = "LICENSE"

[dependencies]
surrealml-core = { version = "0.1.4", path = "../core", features = ["dynamic"] }
uuid = { version = "1.11.1", features = ["v4"] }
ndarray = "0.16.1"

# for the uploading the model to the server
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
base64 = "0.13"
zip = { workspace = true }

[lib]
crate-type = ["cdylib"]
