[package]
name = "c-wrapper"
version = "0.1.4"
edition = "2021"
description = "A Rust wrapper crate providing C bindings for SurrealML."
license-file = "LICENSE"

[dependencies]
surrealml-core = { version = "0.1.4", path = "../core", features = ["dynamic"] }
uuid = { workspace = true }
ndarray = { workspace = true }

# for the uploading the model to the server
tokio = { workspace = true }
hyper = { workspace = true }
base64 = { workspace = true }
zip = { workspace = true }

[lib]
crate-type = ["cdylib"]
