[package]
name = "surrealml-core"
version = "0.1.3"
edition = "2021"
build = "./build.rs"
description = "The core machine learning library for SurrealML that enables SurrealDB to store and load ML models"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum-feature = ["axum"]
actix-feature = ["actix-web"]
default = []
# below are the features for testing different engines
sklearn-tests = []
onnx-tests = []
torch-tests = []
tensorflow-tests = []
gpu = []

[dependencies]
regex = "1.9.3"
# ort = { version = "1.16.2", features = ["load-dynamic"], default-features = false }
ort = { version = "2.0.0-rc.9", features = [ "cuda", "ndarray" ]}
ndarray = "0.16.1"
once_cell = "1.18.0"
bytes = "1.5.0"
futures-util = "0.3.28"
futures-core = "0.3.28"
thiserror = "2.0.9"
serde = { version = "1.0.197", features = ["derive"] }
axum = { version = "0.7.4", optional = true }
actix-web = { version = "4.5.1", optional = true }


[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }

[lib]
name = "surrealml_core"
path = "src/lib.rs"

[build-dependencies]
ort = { version = "1.16.2", default-features = true }
