[package]
name = "surrealml-core"
version = "0.1.9"
edition = "2021"
description = "The core machine learning library for SurrealML that enables SurrealDB to store and load ML models"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic"]
# below are the features for testing different engines
sklearn-tests = []
onnx-tests = []
torch-tests = []
tensorflow-tests = []
gpu = []
dynamic = ["ort/load-dynamic"]

[dependencies]
regex = "1.11.1"
ort = { version = "=2.0.0-rc.9", features = ["cuda", "ndarray"] }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
ndarray = "0.16.1"
once_cell = "1.18.0"
bytes = "1.10.1"
futures-util = "0.3.31"
futures-core = "0.3.31"
thiserror = { workspace = true }
onnx-embedding = "0.1.4"
serde = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "surrealml_core"
path = "src/lib.rs"
