[package]
name = "surrealml-core"
version = "0.1.9"
edition = "2021"
description = "The core machine learning library for SurrealML that enables SurrealDB to store and load ML models"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic"]
# below are the features for testing different engines
sklearn-tests = []
onnx-tests = []
torch-tests = []
tensorflow-tests = []
gpu = []
dynamic = ["ort/load-dynamic"]
tokenizers = ["surrealml-tokenizers"]

[dependencies]
regex = { workspace = true }
ort = { workspace = true }
ort-sys = { workspace = true }
ndarray = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
thiserror = { workspace = true }
onnx-embedding = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
surrealml-tokenizers = { path = "../tokenizers/", optional = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
name = "surrealml_core"
path = "src/lib.rs"