[package]
name = "glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum-feature = ["axum"]
actix-feature = ["actix-web"]
default = ["actix-feature", "axum-feature"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
axum = { version = "0.7.4", optional = true }
actix-web = { version = "4.5.1", optional = true }
