[package]
name = "surrealml-llms"
version = "0.1.0"
edition = "2024"
description = "An interface for loading and running models with candle transformers"
license = "LICENSE"

[dependencies]
surrealml-tokenizers = { path = "../tokenizers", features = ["http-access"] }
serde = { workspace = true }
hf-hub = { workspace = true }
thiserror = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "surrealml_llms"
path = "src/lib.rs"

[features]
http-access = []
local-gemma-test = []
