[package]
name = "surrealml-tokenizers"
version = "0.1.0"
edition = "2024"
description = "An interface for loading tokenizers"
license = "LICENSE"

[dependencies]
tokenizers = { version = "0.21.1", default-features = false, features = [
    "unstable_wasm",
] }
hf-hub = { version = "0.4.1", optional = true, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[lib]
name = "surrealml_tokenizers"
path = "src/lib.rs"

[features]
default = []
http-access = ["hf-hub"]
