[package]
name = "surrealml-tokenizers"
version = "0.1.0"
edition = "2021"
description = "An interface for loading tokenizers"
license = "LICENSE"

[dependencies]
tokenizers = { version = "0.21.1", default-features = false, features = [
    "unstable_wasm",
] }
hf-hub = { workspace = true, optional = true, features = ["tokio"] }
serde = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "surrealml_tokenizers"
path = "src/lib.rs"

[features]
default = []
http-access = ["hf-hub"]
