[package]
name = "surrealml-transformers"
version = "0.1.0"
edition = "2024"

[dependencies]
surrealml-tokenizers = { path = "../tokenizers"}
candle-core = { workspace = true }
anyhow = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }

[lints]
workspace = true
