[package]
name = "surrealml_utils"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.3"
# ort = { version = "1.16.0", features = ["download-binaries"] }
ort = { version = "1.16.0", features = ["load-dynamic"], default-features = false }
ndarray = "0.15.6"
once_cell = "1.18.0"
bytes = "1.5.0"
futures-util = "0.3.28"
futures-core = "0.3.28"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }

[lib]
name = "surrealml_utils"
path = "src/lib.rs"
