[package]
name = "wasm-linker"
version = "0.1.0"
edition = "2024"

[dependencies]
surrealml-tokenizers = { path = "../tokenizers", features = ["http-access"] }
surrealml-llms = { path = "../llms" }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
bytemuck = { workspace = true }

[lints]
workspace = true
