[package]
name = "data-access-layer"
version = "0.1.1"
edition = "2021"
description = "A data access pipeline"
license-file = "LICENSE"

[lib]
name = "data_access_layer"
crate-type = ["cdylib", "rlib"]


[features]
default = ["python"]
python = ["pyo3"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.8"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
pyo3 = { version = "0.20.0", features = ["abi3-py38"], optional = true}
