[package]
name = "c-wrapper"
version = "0.1.4"
edition = "2021"
description = "A Rust wrapper crate providing C bindings for SurrealML."
license-file = "LICENSE"

[dependencies]
surrealml-core = { path = "../core", features = ["dynamic"] }
uuid = { version = "1.11.1", features = ["v4"] }
ndarray = "0.16.1"

# for the uploading the model to the server
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
base64 = "0.13"
zip = "4.0.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tar = "0.4"       # For extracting tar files
flate2 = "1.0"    # For handling gzip
