[package]
name = "c-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealml-core = { path = "../core" }
uuid = { version = "1.4.1", features = ["v4"] }
ndarray = "0.16.1"

# for the uploading the model to the server
tokio = { version = "1.42.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
base64 = "0.13"

[lib]
crate-type = ["cdylib"]
